# automation-brain

./: 00-Index.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  IMPLEMENTATION_COMPLETE.md  README.md  STRATEGY.md  STRUCTURE.md  package-lock.json  package.json  tsconfig.json
.planning/: REQUIREMENTS.md  ROADMAP.md  STATE.md
bootstrap/: README.md  claude-md-template.md
cache/: README.md  dispatcher-quota.json  model-registry.json  phase5-portability-spec.md  tier-selection-rules.md
dashboard/: Cargo.toml  README.md
dashboard/src/: main.rs
dashboard/src/ui/: mod.rs
doctrine/: README.md
employees/: engineer-active-session.json  engineer-claude.json  engineer-codex.json
findings/: README.md
hooks/: ark-session-end.sh  ark-session-start.sh  brain-session-start.sh
lessons/: README.md
observability/: README.md  budget-events.jsonl  cross-customer-insights.md  lesson-effectiveness.md  model-weight-adjustments.md  phase-6-daemon-extended.ts  phase-6-daemon.ts  phase-7-model-registry.ts  phase-7-tier-resolver.ts  template-drift.md  token-spend-log.md
scripts/: ark  ark-align.sh  ark-backup.sh  ark-budget.sh  ark-context.sh  ark-continuous.sh  ark-create.sh  ark-deliver.sh  ark-doctor.sh  ark-escalations.sh  ark-lifecycle.sh  ark-observer.sh  ark-pm-signoff.sh  ark-policy.sh  ark-portfolio-decide.sh  ark-portfolio.sh  ark-promote.sh  ark-report.sh  ark-secrets.sh  ark-sync.sh  ark-team-v2.sh  ark-team.sh  ark-validate.sh  ark-verify.sh  bootstrap-policy.sh  brain  brain-backup.sh  brain-budget.sh  brain-create.sh  brain-deliver.sh  brain-doctor.sh  (+16 more)
(+373 files in other folders)
