[package]
name = "ark-dash"
version = "0.1.0"
edition = "2021"
description = "Ark OS — Executive dashboard for the agentic operating system"
authors = ["Ark OS"]

[[bin]]
name = "ark-dash"
path = "src/main.rs"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
walkdir = "2"
anyhow = "1"

[profile.release]
opt-level = 3
lto = true
strip = true
